# webtransport-interop

./: .flake8  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_proposal.yml
scripts/: provision.py
site/: index.html
site/assets/: matrix.js  style.css
src/webtransport_interop/: config.py  main.py  matrix.py  registry.py  reporter.py  runtime.py  types.py
src/webtransport_interop/endpoints/: base_endpoint.py
src/webtransport_interop/endpoints/clients/: chrome.py  edge.py  firefox.py  pywebtransport.py
src/webtransport_interop/endpoints/servers/: pywebtransport.py  wtransport_interop_service.py
src/webtransport_interop/scenarios/: base_scenario.py  devious_baton.py  echo.py
